<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemNameLabel" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/itemName" />

    <TextView
        android:text="@string/item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemType" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aspnType" />

    <TextView
        android:text="@string/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemQuantity" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/aQuant" />

</LinearLayout>