<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text=""
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:id="@+id/groceryListName"
        android:layout_weight="0.94" />

    <Button
        android:text="View/Edit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/editGroceryListButton" />
</LinearLayout>