<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:ems="10"
        android:id="@+id/searchBar" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:id="@+id/searchResultsListView" />


</LinearLayout>